--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
     <h1>Bursaries South Africa</h1>
     <p>This website is dedicated to helping students in South Africa apply for bursaries offered by South African companies without any hassle. We provide valuable information and resources to simplify the bursary application process, ensuring that students have the support they need to access educational opportunities.</p>
-    <p><a href="Registration.html" class="button" id="getStartedLink">Get Started</a></p>
+    <p><a href="Registration.php" class="button" id="getStartedLink">Get Started</a></p>
 
     <script>
         // JavaScript for the "Get Started" link
