--- a/index.html
+++ b/index.html
@@ -1,71 +1,99 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Bursaries South Africa</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
+  <style>
+    body {
+      background-color: lightblue;
+    }
 
-        h1 {
-            text-align: center;
-            background: linear-gradient(45deg, #FF5733, #007BFF, #00FF00);
-            -webkit-background-clip: text;
-            color: transparent;
-        }
+    .Kids {
+      font-family: arial;
+      font-size: 50px;
+      text-align: center;
+      font-weight: bold;
+      background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+    .p,content-div{
+      margin-top:0;
+      margin-bottom:0;
+      margin-left:0;
+      margin-right:0;
+      padding-top:0;
+      padding-bottom:0;
+      padding-left:0;
+      padding-right:0;
+    }
 
-        p {
-            text-align: center;
-            padding: 20px;
-            margin: 0;
-        }
+    .kid {}
 
-        a.button {
-            display: inline-block;
-            text-decoration: none;
-            color: #fff;
-            background-color: #007BFF;
-            font-weight: bold;
-            padding: 10px 20px;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
+    .with {}
 
-        a.button:hover {
-            background-color: #0056b3;
-        }
+    .bursaries {}
 
-        /* Responsive Styles */
-        @media screen and (max-width: 768px) {
-            h1 {
-                font-size: 28px;
-            }
+    .kid:hover {
+      color: red;
+    }
 
-            p {
-                font-size: 16px;
-            }
+    .with:hover {
+      color: blue;
+    }
 
-            a.button {
-                font-size: 14px;
-            }
-        }
-    </style>
+    .bursaries:hover {
+      color: orange;
+    }
+
+    .description {
+      text-align: center;
+      font-size: 20px;
+      font-family: arial;
+      margin-bottom: 60px;
+    }
+
+    /* Center the button */
+    .button1 {
+      display: block;
+      margin: 0 auto;
+      background-color: blue;
+      color: white;
+      border: none;
+      padding-top: 8px;
+      padding-bottom: 8px;
+      padding-left: 8px;
+      padding-right: 8px;
+      border-radius: 7px;
+      opacity: 0.5;
+      transition: opacity 0.2s;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .button1:active {
+      opacity: 1;
+    }
+
+    /* Style for the div */
+    .content-div {
+      background-color: white; /* Change this to the desired color */
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      margin: 20px;
+    }
+  </style>
+
 </head>
+
 <body>
-    <h1>Bursaries South Africa</h1>
-    <p>This website is dedicated to helping students in South Africa apply for bursaries offered by South African companies without any hassle. We provide valuable information and resources to simplify the bursary application process, ensuring that students have the support they need to access educational opportunities.</p>
-    <p><a href="Form.php" class="button" id="getStartedLink">Get Started</a></p>
+  <p class="Kids">
+    <span class="kid">Kids</span><span class="with">With</span><span class="bursaries">Bursaries</span></p>
+  <div class="content-div">
+    <p class="description">Kids with bursaries is a program designed to help with unemployment around South Africa by reducing the hassle between
+      bursary applicants and companies that offer bursaries </p>
+  </div>
+  <button class="button1">Register</button>
 
-    <script>
-        // JavaScript for the "Get Started" link
-        document.getElementById("getStartedLink").addEventListener("click", function() {
-            alert("Welcome to Bursaries South Africa! Let's get started.");
-        });
-    </script>
 </body>
-</html>
 
+</html>
