--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
       opacity: 0.7;
       transition: opacity 0.2s;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      padding-top:10px;
+      padding-bottom:10px;
     }
 
     .button1:active {
