--- a/index.html
+++ b/index.html
@@ -1,110 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      background-color: lightblue;
-      margin: 0;
-      padding: 0;
-      font-size: 16px;
-    }
-
-    .Kids {
-      font-family: arial;
-      font-size: 40px;
-      text-align: center;
-      font-weight: bold;
-      background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-
-    .kid {}
-
-    .with {}
-
-    .bursaries {}
-
-    .kid:hover {
-      color: red;
-    }
-
-    .with:hover {
-      color: blue;
-    }
-
-    .bursaries:hover {
-      color: orange;
-    }
-
-    .description {
-      text-align: center;
-      font-size: 18px;
-      font-family: arial;
-      margin: 20px;
-    }
-
-    /* Center the button */
-    .button1 {
-      display: block;
-      margin: 0 auto;
-      background-color: blue;
-      color: white;
-      border: none;
-      padding: 23px;
-      font-size: 20px;
-      border-radius: 30px;
-      opacity: 0.7;
-      transition: opacity 0.2s;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      padding-top: 10px;
-      padding-bottom: 10px;
-    }
-
-    .button1:active {
-      opacity: 1;
-    }
-
-    /* Style for the div */
-    .content-div {
-      background-color: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      margin: 20px;
-    }
-
-    /* Media query for smaller screens (adjust as needed) */
-    @media (max-width: 600px) {
-      .Kids {
-        font-size: 24px;
+<html>
+  <head>
+    <style>
+      p {
+        margin: 0;
       }
 
-      .description {
-        font-size: 12px;
+      .div-row {
+        font-weight: bold;
+        font-family: Arial;
+        border-bottom: 1px solid #ccc;
+        padding-bottom: 5px;
+        padding-top: 16px;
+        padding-bottom: 16px;
+        position: relative;
       }
-    }
-  </style>
-</head>
 
-<body>
-  <p class="Kids">
-    <span class="kid">Kids</span><span class="with">With</span><span class="bursaries">Bursaries</span></p>
-  <div class="content-div">
-    <p class="description">Kids with bursaries is a program designed to help with unemployment around South Africa by reducing the hassle between
-      bursary applicants and companies that offer bursaries </p>
-  </div>
-  <button class="button1" onclick="openForm()">Register</button>
+      .arrow-container {
+        position: absolute;
+        top: 50%;
+        right: 0;
+        transform: translateY(-50%);
+      }
 
-  <script>
-    function openForm() {
-      window.location.href = 'Form.html';
-    }
-  </script>
-</body>
+      .arrow {
+        color: blue;
+        font-size: 20px;
+        font-weight: 300;
+        margin-left: 5px; /* Add this line for a small space between > and text */
+      }
+    </style>
+  </head>
+  <body>
+    <div class="div-row">
+      <p>
+        Capitec: Payment +R10000.00 into SAVINGS
+      </p>
+      <p>
+        ACCOUNT; Ref B MKHABELE; Avail R12070.00; 05-...
+      </p>
+      <div class="arrow-container">
+        <div class="arrow">></div>
+      </div>
+    </div>
 
+    <div class="div-row">
+      <p>
+        Capitec: Payment +R10000.00 into SAVINGS ACCOUNT
+      </p>
+      <p>
+        ACCOUNT; Ref B MKHABELE; Avail R12070.00; 05-...
+      </p>
+      <div class="arrow-container">
+        <div class="arrow">></div>
+      </div>
+    </div>
+
+    <div class="div-row">
+      <p>
+        Capitec: Payment +R10000.00 into SAVINGS ACCOUNT
+      </p>
+      <p>
+        ACCOUNT; Ref B MKHABELE; Avail R12070.00; 05-...
+      </p>
+      <div class="arrow-container">
+        <div class="arrow">></div>
+      </div>
+    </div>
+
+    <div class="div-row">
+      <p>
+        Capitec: Payment +R10000.00 into SAVINGS ACCOUNT
+      </p>
+      <p>
+        ACCOUNT; Ref B MKHABELE; Avail R12070.00; 05-...
+      </p>
+      <div class="arrow-container">
+        <div class="arrow">></div>
+      </div>
+    </div>
+  </body>
 </html>
-
