--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         padding-top: 16px;
         padding-bottom: 16px;
         position: relative;
+        font-size:18px;
       }
 
       .arrow-container {
@@ -46,7 +47,7 @@
 
     <div class="div-row">
       <p>
-        Capitec: Payment +R10000.00 into SAVINGS ACCOUNT
+        Capitec: Payment +R10000.00 into SAVINGS 
       </p>
       <p>
         ACCOUNT; Ref B MKHABELE; Avail R12070.00; 05-...
@@ -58,7 +59,7 @@
 
     <div class="div-row">
       <p>
-        Capitec: Payment +R10000.00 into SAVINGS ACCOUNT
+        Capitec: Payment +R10000.00 into SAVINGS 
       </p>
       <p>
         ACCOUNT; Ref B MKHABELE; Avail R12070.00; 05-...
@@ -70,7 +71,7 @@
 
     <div class="div-row">
       <p>
-        Capitec: Payment +R10000.00 into SAVINGS ACCOUNT
+        Capitec: Payment +R10000.00 into SAVINGS 
       </p>
       <p>
         ACCOUNT; Ref B MKHABELE; Avail R12070.00; 05-...
