--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       text-align: center;
       position: sticky;
       top: 0;
-     
       z-index: 100;
       display: flex;
       justify-content: space-between;
@@ -109,6 +108,7 @@
     /* Parent container for flex layout */
     .flex-container {
       display: flex;
+      height: 300px;
     }
 
     /* Page content styles */
@@ -163,6 +163,49 @@
     .navbar.open {
       left: 0;
     }
+
+    /* Additional styles for the new div and button */
+    .new-div {
+      padding: 20px;
+      background-color: #f4f4f4;
+      text-align: center;
+    }
+
+    .new-button {
+      background-color: #d45a00; /* Updated to a darker shade of orange */
+      color: white;
+      border: none;
+      padding: 10px;
+      cursor: pointer;
+      font-size: 16px;
+      border-radius: 5px;
+      font-size: 12px;
+      position: relative;
+    }
+
+    /* Loading circle animation */
+    .loading-circle {
+      border: 4px solid rgba(255, 255, 255, 0.3);
+      border-top: 4px solid #d45a00;
+      border-radius: 50%;
+      width: 20px;
+      height: 20px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      animation: spin 1s linear infinite;
+      display: none;
+    }
+
+    @keyframes spin {
+      0% {
+        transform: translate(-50%, -50%) rotate(0deg);
+      }
+      100% {
+        transform: translate(-50%, -50%) rotate(360deg);
+      }
+    }
   </style>
 </head>
 
@@ -209,11 +252,30 @@
     </div>
   </div>
 
+  <!-- New div with a button -->
+  <div class="new-div">
+    <button class="new-button" onclick="handleButtonClick()">Upload Documents
+      <div class="loading-circle" id="loadingCircle"></div>
+    </button>
+  </div>
+
   <script>
     // Function to toggle the visibility of the navbar
     function toggleNavbar() {
       var navbar = document.getElementById('navbar');
       navbar.classList.toggle('open');
+    }
+
+    // Function to handle button click and show loading circle
+    function handleButtonClick() {
+      var loadingCircle =  document.getElementById('loadingCircle');
+      loadingCircle.style.display = 'inline-block';
+
+      // Simulate some asynchronous task (e.g., AJAX request)
+      setTimeout(function () {
+        // Hide loading circle after the task is completed
+        loadingCircle.style.display = 'none';
+      }, 2000); // Adjust the duration as needed
     }
   </script>
 
