--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       padding: 20px;
       margin-top: 30px;
       margin-left: 20px;
-      height: 1500px;
+      height: 0px;
       width: 1fr; /* Set flex to 1 (1fr) */
     }
     .Nsfas {
@@ -169,6 +169,7 @@
       padding: 20px;
       background-color: #f4f4f4;
       text-align: center;
+      margin-top:40px;
     }
 
     .new-button {
@@ -181,6 +182,7 @@
       border-radius: 5px;
       font-size: 12px;
       position: relative;
+      
     }
 
     /* Loading circle animation */
