--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     <!-- Page Content -->
     <div class="content">
       <h1><span class="Nsfas">NSFAS</span>2024 Applications <span class="Nsfas">are officially</span> opened!</h1>
-      <p>This is a simple example of a web page with a sticky header, a left navigation bar, and buttons to open/close the navbar. Scroll down to see the effect.</p>
+      <p>This page has been specifically designed for students without funding, who will receive the link from an official NSFAS guide to facilitate the process of document uploads for their assistance.</p>
       <!-- Add more content as needed -->
     </div>
 
