--- a/Form.html
+++ b/Form.html
@@ -49,7 +49,7 @@
       top: 0;
       left: -200px;
       overflow-y: auto;
-      padding-top: 70px;
+      padding-top: 120px; /* Increased padding-top by 50px */
       transition: left 0.3s ease;
       z-index: 1001;
       border-right: 1px solid #ccc;
