--- a/Form.html
+++ b/Form.html
@@ -14,17 +14,57 @@
     /* Header styles */
     .header {
       background-color: white;
+      padding: 10px 20px;
       color: black;
       text-align: center;
-      padding: 20px 0; /* Added 20px padding to the top and bottom */
-      position: fixed;
-      width: 100%;
+      position: sticky;
       top: 0;
-      z-index: 1000;
+      z-index: 100;
       display: flex;
       justify-content: space-between;
       align-items: center;
       border-bottom: 1px solid #ccc;
+      margin-top: 0px;
+      margin-bottom: 20px;
+    }
+
+    /* Profile icon container */
+    .profile-icon {
+      margin-right: 10px;
+    }
+
+    /* Open button styles */
+    .open-btn {
+      background-color: white;
+      color: black;
+      border: none;
+      padding: 10px;
+      cursor: pointer;
+      font-size: 16px;
+      width: auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    /* Right button styles */
+    .right-btn {
+      background-color: #d45a00;
+      color: white;
+      border: none;
+      padding: 10px;
+      cursor: pointer;
+      font-size: 16px;
+      border-radius: 5px;
+      font-size: 12px;
+    }
+
+    /* Hamburger icon styles */
+    .hamburger-icon {
+      width: 25px;
+      height: 3px;
+      background-color: white;
+      margin-bottom: 5px;
     }
 
     .header-div {
