--- a/Form.html
+++ b/Form.html
@@ -33,6 +33,12 @@
       margin-right: 10px;
     }
 
+    /* Adjusted width for NSFAS logo */
+    .nsfas-logo {
+      width: 30px;
+      height: auto;
+    }
+
     /* Open button styles */
     .open-btn {
       background-color: white;
