--- a/Form.html
+++ b/Form.html
@@ -42,10 +42,11 @@
       padding: 10px;
       cursor: pointer;
       font-size: 16px;
-      width: auto;
+      width: 30px;
       display: flex;
       align-items: center;
       justify-content: center;
+   
     }
 
     /* Right button styles */
@@ -59,6 +60,9 @@
       border-radius: 5px;
       font-size: 12px;
     }
+    .icon{
+    width: 20px;
+    }
 
     /* ... (rest of your styles) */
   </style>
@@ -71,7 +75,7 @@
     <!-- Profile icon container -->
     <div class="profile-icon">
       <!-- NSFAS logo -->
-      <img src="NSFASlogo.jpeg" alt="NSFAS Logo" class="nsfas-logo">
+      <img class="icon" src="NSFASlogo.jpeg" alt="NSFAS Logo" class="nsfas-logo">
     </div>
 
     <!-- Open Button with Icon -->
