--- a/Form.html
+++ b/Form.html
@@ -46,7 +46,6 @@
       display: flex;
       align-items: center;
       justify-content: center;
-   
     }
 
     /* Right button styles */
@@ -64,7 +63,80 @@
     width: 20px;
     }
 
-    /* ... (rest of your styles) */
+    /* Header div styles */
+    .header-div {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 0 20px;
+      padding: 20px 0; /* Add 20px padding top and bottom */
+    }
+
+    h1 {
+      margin: 0px;
+    }
+
+    /* Left navbar styles */
+    .navbar {
+      width: 200px;
+      height: 100vh;
+      background-color: white;
+      color: black;
+      position: fixed;
+      top: 0;
+      left: -200px;
+      overflow-y: auto;
+      padding-top: 120px;
+      transition: left 0.3s ease;
+      z-index: 999;
+      border-right: 1px solid #ccc;
+    }
+
+    .navbar a, .close-btn {
+      display: block;
+      padding: 10px;
+      text-decoration: none;
+      color: black;
+      cursor: pointer;
+    }
+
+    .navbar a:hover, .close-btn:hover {
+      background-color: #ccc;
+    }
+
+    /* Open button styles */
+    .open-btn {
+      background-color: transparent;
+      border: none;
+      cursor: pointer;
+      color: #4CAF50;
+      font-size: 18px;
+    }
+
+    /* Container for three divs */
+    .div-container {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      padding: 20px;
+      background-color: #f4f4f4;
+      margin-top: 100px;
+    }
+
+    /* Individual div styles */
+    .upload-div {
+      background-color: #3498db;
+      color: white;
+      padding: 15px;
+      text-align: center;
+      border-radius: 5px;
+    }
+
+    /* Content styles */
+    .content {
+      min-height: 500px;
+      padding: 20px;
+    }
   </style>
 </head>
 
@@ -88,7 +160,64 @@
     <button class="right-btn">myNSFAS</button>
   </div>
 
-  <!-- ... (rest of your HTML) -->
+  <!-- Left Navbar -->
+  <div class="navbar" id="navbar">
+    <button class="close-btn" onclick="toggleNavbar()">Close Navbar</button>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Contact</a>
+    <a href="#" onclick="showDocumentsSection()">Documents</a> <!-- Add a new section for Documents -->
+  </div>
+
+  <!-- Div Container -->
+  <div class="div-container">
+    <!-- Div 1: Upload Document -->
+    <div class="upload-div">
+      <h2>Upload Document</h2>
+    </div>
+
+    <!-- Div 2: Additional Div -->
+    <div class="additional-div">
+      <h2>Additional Div</h2>
+    </div>
+
+    <!-- Div 3: Another Div -->
+    <div class="another-div">
+      <h2>Another Div</h2>
+    </div>
+  </div>
+
+  <!-- Document Upload Page Content -->
+  <div class="content">
+    <h1>Main Content Goes Here</h1>
+    <div id="documents-section" style="display: none;">
+      <!-- Add content related to documents here -->
+      <p>This is the documents section. Add your content here.</p>
+    </div>
+  </div>
+
+  <script>
+    var navbar = document.getElementById('navbar');
+
+    // Function to toggle the visibility of the navbar
+    function toggleNavbar() {
+      var currentLeft = parseInt(window.getComputedStyle(navbar).left);
+      if (currentLeft >= 0) {
+        // If navbar is visible, hide it
+        navbar.style.left = "-200px";
+      } else {
+        // If navbar is hidden, show it
+        navbar.style.left = "0";
+      }
+    }
+
+    // Function to show the Documents section
+    function showDocumentsSection() {
+      var documentsSection = document.getElementById('documents-section');
+      documentsSection.style.display = 'block';
+    }
+  </script>
 
 </body>
 
