--- a/Form.html
+++ b/Form.html
@@ -165,7 +165,7 @@
   <!-- Left Navbar -->
   <div class="navbar" id="navbar">
     <button class="close-btn" onclick="toggleNavbar()">Close Navbar</button>
-    <a href="#">Home</a>
+    <a href="index.html">Home</a> <!-- Set the href attribute to point to index.html -->
     <a href="#">About</a>
     <a href="#">Services</a>
     <a href="#">Contact</a>
